# laplace-minimax

./: .gersemirc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  Makefile.gfortran  Makefile.ifort  README.md
data/: init_error.txt  init_para.txt
inc/: consts.h  error.h  error_tiny.h  init.h  init_tiny.h  laplace_minimax.h
src/: dd128_arithmetics.F90  dd128_linalg.F90  lap_init.F90  lap_maehly.F90  lap_numlap.F90  lap_numlap2.F90  lap_paraopt.F90  lap_rddata.F90  lap_rderror.F90  lap_rmsd.F90  laplace_minimax.F90  test_laplace.F90
